Fix missing navbar link.

--- a/userAdd.html
+++ b/userAdd.html
@@ -45,7 +45,7 @@
               <ul class="dropdown-menu">
                 <li class="dropdown-header">Nodes</li>
                 <li><a href="nodeList">List of Nodes</a></li>
-                <li><a href="#">Add New Node</a></li>
+                <li><a href="nodeAdd">Add New Node</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">Users</li>
                 <li><a href="userList">List of Users</a></li>
