Remove php specific urls.

--- a/logtail.html
+++ b/logtail.html
@@ -88,7 +88,7 @@
     
     function refreshLog() {
         $.ajax({
-	        url: "api/logtail.php",
+	        url: "api/logtail",
 	        type: "GET",
 	        dataType: 'json',
 	        success: function( data ) {
