--- a/userAdd.html
+++ b/userAdd.html
@@ -127,7 +127,7 @@
 		    }
 		    $("#addStatus").html("<b>Adding..</b>");
 		    $.ajax({
-			    url: "api/addUser.php",
+			    url: "api/addUser",
 			    type: "POST",
 			    data: {
 				    name: $("#name").val(),
