--- a/userList.html
+++ b/userList.html
@@ -88,7 +88,7 @@
     
     function refreshUserList() {
         $.ajax({
-	        url: "api/userInfo.php",
+	        url: "api/userInfo",
 	        type: "GET",
 	        dataType: 'json',
 	        success: function( data ) {
