--- a/map.html
+++ b/map.html
@@ -106,7 +106,7 @@
     
     function refreshNodes() {
         $.ajax({
-	        url: "api/mapNodes.php",
+	        url: "api/mapNodes",
 	        type: "GET",
 	        dataType: 'json',
 	        success: function( data ) {
