--- a/nodeList.html
+++ b/nodeList.html
@@ -88,7 +88,7 @@
     
     function refreshNodeList() {
         $.ajax({
-	        url: "api/nodeInfo.php",
+	        url: "api/nodeInfo",
 	        type: "GET",
 	        dataType: 'json',
 	        success: function( data ) {
