--- a/userAdd.html
+++ b/userAdd.html
@@ -13,6 +13,10 @@
     body {
         padding-top: 30px;
     }
+    .user-form {
+        padding: 40px 15px;
+        text-align: left;
+    }
     .fixed-latlon-label {
         opacity: 0.3;
     }
@@ -70,7 +74,7 @@
 
     <div class="container">
 
-      <div class="node-form">
+      <div class="user-form">
         <h1>Add User</h1>
         <p class="lead">To add a User, input your name and email address (email will not be public, only used for administrator contact)
         <br>Optionally set a description, perhaps including location and website address.</p>
