--- a/userList.html
+++ b/userList.html
@@ -17,6 +17,15 @@
         padding: 40px 15px;
         text-align: left;
     }
+    .browse_item.row {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        min-height: 2em;
+        color: #666;
+    }
+    .browse_item:hover {
+        background-color: #B8E6F3;
+    }
     </style>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -93,12 +102,24 @@
 	        dataType: 'json',
 	        success: function( data ) {
 	            if(typeof(data.length)!= 'undefined' && data.length!=0) {
-	                // Parse data
-	                // Construct HTML
-	                $("#userlist-inner").html(data);
+	                var output="";
+	                var dataLength = data.length;
+                    for (var i=0; i<dataLength; i++) {
+                        output+='<div id="'+data[i].i+'_row" class="browse_item row">';
+                        output+='<div class="col-md-3"><b>'+data[i].n+'</b></div>';
+                        output+='<div class="col-md-6">'+data[i].d+'</div>';
+                        //output+='<div class="col-md-3">'+data[i].nn+' nodes</div>';
+                        output+='<div class="col-md-3">x nodes</div>';
+                        output+='</div>';
+                    }
+	                $("#userlist-inner").html(output);
                     if(pageStarting) {
                         pageStarting=false;
                     }
+                    $(".row").click(function(event){
+                        var wantedId = event.currentTarget.id.substring(0,event.currentTarget.id.length-4);
+                        window.location.href = "userInfo?id="+wantedId;
+                    });
 		        } else {
 		            if(pageStarting) {
 		                $("#userlist-inner").html("<p><b>Nothing Found!</b></p>");
