Adjust node display for db data.

--- a/nodeInfo.html
+++ b/nodeInfo.html
@@ -94,7 +94,7 @@
 	            if(typeof(data.length)!= 'undefined' && data.length!=0) {
 	                var output="";
 	                output+='<h1>'+data[0].n+'</h1>';
-	                output+='<p class="lead">'+data[0].d+'</p>';
+	                output+='<p class="lead">'+data[0].o+'</p>';
 	                $("#nodeinfo").html(output);
                     if(pageStarting) {
                         pageStarting=false;
