--- a/nodeList.html
+++ b/nodeList.html
@@ -108,7 +108,7 @@
                     for (var i=0; i<dataLength; i++) {
                         output+='<div id="'+data[i].i+'_row" class="browse_item row">';
                         output+='<div class="col-md-3"><b>'+data[i].n+'</b></div>';
-                        output+='<div class="col-md-6">'+data[i].d+'</div>';
+                        //output+='<div class="col-md-6">'+data[i].d+'</div>';
                         output+='<div class="col-md-3">'+data[i].o+'</div>';
                         output+='</div>';
                     }
