--- a/logtail.html
+++ b/logtail.html
@@ -145,7 +145,7 @@
 	                var dataLength = data.length;
                     for (var i=0; i<dataLength; i++) {
                         output+='<div id="'+data[i].i+'_row" class="row">';
-                        output+='<div class="col-md-3"><b>'+data[i].i+',&nbsp;'+moment(data[i].t*1000).format("YYYY-MM-DD HH:mm:ss")+'</b></div>';
+                        output+='<div class="col-md-3"><b>['+data[i].i+',&nbsp;'+moment(data[i].t*1000).format("YYYY-MM-DD HH:mm:ss")+']</b></div>';
                         output+='<div class="col-md-4">'+data[i].p+'</div>';
                         output+='<div class="col-md-2"><a href="nodeInfo?id='+data[i].ni+'">'+data[i].nn+'</a></div>';
                         output+='<div class="col-md-3">'+data[i].s+'</div>';
