--- a/logtail.html
+++ b/logtail.html
@@ -108,7 +108,7 @@
         type: "GET",
         dataType: 'json',
         success: function( data ) {
-            if(data!="null" && typeof(data.length)!= 'undefined' && data.length!=0) {
+            if(typeof(data.length)!= 'undefined' && data.length!=0) {
                 var output="";
                 var dataLength = data.length;
                 for (var i=0; i<dataLength; i++) {
@@ -140,7 +140,7 @@
 	            lastId: lastId
 	        },
 	        success: function( data ) {
-	            if(data!="null" && typeof(data.length)!= 'undefined' && data.length!=0) {
+	            if(typeof(data.length)!= 'undefined' && data.length!=0) {
 	                var output="";
 	                var dataLength = data.length;
                     for (var i=0; i<dataLength; i++) {
