Use minified bootstrap css.

--- a/map.html
+++ b/map.html
@@ -7,7 +7,7 @@
     <meta name="description" content="UKHASnet - A simple license-free mesh network.">
     <meta name="author" content="UK High Altitude Society">
     <title>UKHASnet Map</title>
-    <link href="static/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/leaflet/leaflet.css" rel="stylesheet">
     <link href="static/bootstrap/css/ukhasnet.css" rel="stylesheet">
     <style>
