--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p>A simple wireless network aimed for use with low power licence exempt wireless modules. Ideally to be used for a local ground network for example for remote temperature sensing however will also be designed to allow for high altitude communications such as via meterological balloons.</p>
         <p>The modules used are extremely low cost to encourage widespread development and deployment.</p>
         <p>
-          <a class="btn btn-lg btn-primary" href="map.html" role="button">Network Map &raquo;</a>
+          <a class="btn btn-lg btn-primary" href="map" role="button">Network Map &raquo;</a>
           <a class="btn btn-lg btn-primary" href="https://github.com/jamescoxon/UKHASnet" target="_blank" role="button">GitHub Repo &raquo;</a>
           <a class="btn btn-lg btn-primary" href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank" role="button">IRC Channel &raquo;</a>
         </p>
