Change github link to point to organisation.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="https://github.com/jamescoxon/UKHASnet/" target="_blank">GitHub Repo</a></li>
+            <li><a href="https://github.com/UKHASnet/" target="_blank">GitHub</a></li>
             <li><a href="logtail">Logtail</a></li>
           </ul>
         </div>
@@ -72,7 +72,7 @@
         <p>The modules used are extremely low cost to encourage widespread development and deployment.</p>
         <p>
           <a class="btn btn-lg btn-primary" href="map" role="button">Network Map &raquo;</a>
-          <a class="btn btn-lg btn-primary" href="https://github.com/jamescoxon/UKHASnet" target="_blank" role="button">GitHub Repo &raquo;</a>
+          <a class="btn btn-lg btn-primary" href="https://github.com/UKHASnet" target="_blank" role="button">GitHub &raquo;</a>
           <a class="btn btn-lg btn-primary" href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank" role="button">IRC Channel &raquo;</a>
         </p>
       </div>
