--- a/nodeInfo.html
+++ b/nodeInfo.html
@@ -67,7 +67,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="https://github.com/jamescoxon/UKHASnet/" target="_blank">GitHub Repo</a></li>
+            <li><a href="https://github.com/UKHASnet/" target="_blank">GitHub</a></li>
             <li><a href="logtail">Logtail</a></li>
           </ul>
         </div>
