--- a/logtail.html
+++ b/logtail.html
@@ -72,7 +72,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="https://github.com/jamescoxon/UKHASnet/" target="_blank">GitHub Repo</a></li>
+            <li><a href="https://github.com/UKHASnet/" target="_blank">GitHub</a></li>
             <li class="active"><a href="#">Logtail</a></li>
           </ul>
         </div>
