nodeInfo: Move graphs to right.

--- a/nodeInfo.html
+++ b/nodeInfo.html
@@ -22,6 +22,10 @@
         padding-left: 15px;
         text-align: left;
     }
+    .node-graphs {
+        padding-top: 50px;
+        padding-bottom: 20px;
+    }
     </style>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -75,14 +79,14 @@
     </div>
 
     <div class="container">
-
+    <div class="col-md-5">
       <div id="nodeinfo" class="node-info">
       </div>
       <div id="nodedata" class="node-data">
       </div>
-      <div id="nodegraphs" class="node-graphs">
-      </div>
-
+    </div>
+    <div id="nodegraphs" class="col-md-7 node-graphs">
+    </div>
     </div><!-- /.container -->
     <script src="static/jquery-1.10.2.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
