--- a/nodeInfo.html
+++ b/nodeInfo.html
@@ -164,14 +164,14 @@
                 for (var j=0; j<data.length; j++) { // For each Telem Field
                 var newDiv = $('<div>Loading Graph</div>');
                 $('#nodegraphs').append(newDiv);    
-                newDiv.attr('id', 'nodegraph-'+data[j].t);
+                newDiv.attr('id', 'nodegraph-'+data[j].t+data[j].i);
                     for (var i=0; i<data[j].d.length; i++) { // For each packet
                         currentGraphData[i] = [];
                         currentGraphData[i][0] = moment.unix(data[j].d[i].t).toDate(); // TODO: Write a custom, faster parser?
                         currentGraphData[i][1] = data[j].d[i].d;
                     }
                     currentGraphObj = new Dygraph(
-                        document.getElementById('nodegraph-'+data[j].t),
+                        document.getElementById('nodegraph-'+data[j].t+data[j].i),
                         currentGraphData, {
                             title: data[j].tn,
                             //fillGraph: true,
