nodeInfo: Increase legend width from 250px to 275px.

--- a/nodeInfo.html
+++ b/nodeInfo.html
@@ -215,7 +215,8 @@
                             title: data[j].tn,
                             //fillGraph: true,
                             ylabel: data[j].t,
-                            labels: ['Time', data[j].tn]
+                            labels: ['Time', data[j].tn],
+                            labelsDivWidth:275 // Legend width
                         }
                     );
                 }
@@ -249,7 +250,8 @@
                             title: data[j].tn,
                             //fillGraph: true,
                             ylabel: data[j].t,
-                            labels: ['Time', data[j].tn]
+                            labels: ['Time', data[j].tn],
+                            labelsDivWidth:275 // Legend width
                         }
                     );
                 }
