--- a/map.html
+++ b/map.html
@@ -119,15 +119,18 @@
 	                    } else {
 	                        var nodeIcon = deadIcon;
 	                    }
-	                    if(!nodeMarkers[data[i].name]) {
-	                        nodeMarkers[data[i].name] = L.marker([data[i].lat,data[i].lon], {
-                                title: data[i].name,
+	                    if(!nodeMarkers[data[i].n]) {
+	                        nodeMarkers[data[i].n] = L.marker([data[i].la,data[i].lo], {
+                                title: data[i].nn,
                                 icon: nodeIcon
                             }).addTo(map);
                         } else {
-                            nodeMarkers[data[i].name].setIcon(nodeIcon);
+                            nodeMarkers[data[i].n].setIcon(nodeIcon);
                         }
-                        nodeMarkers[data[i].name].bindPopup('<b style="font-size:12px">'+data[i].name+"</b><br>Last Updated: "+data[i].rxt);
+                        nodeMarkers[data[i].n].bindPopup('<b style="font-size:12px">'+data[i].n+"</b> (<a href='/nodeInfo?id="+data[i].i+"' target='_blank'>node info</a>)<br>"
+                            +"<b>Owner:</b> "+data[i].o+"<br>"
+                            +"<b>Last Packet:</b> "+data[i].p+" <i>"+moment(data[i].a*1000).fromNow()+"</i>"
+                        );
                     }
 		        }
 	        }
