--- a/map.html
+++ b/map.html
@@ -118,7 +118,7 @@
 	                var utcTime = moment.utc().unix();
 	                var dataLength = data.length;
 	                for (var i=0; i<dataLength; i++) {
-	                    if(data[i].active>utcTime-3600) {
+	                    if(data[i].a>utcTime-3600) {
 	                        var nodeIcon = activeIcon;
 	                    } else {
 	                        var nodeIcon = deadIcon;
