--- a/map.html
+++ b/map.html
@@ -123,18 +123,20 @@
 	                    } else {
 	                        var nodeIcon = deadIcon;
 	                    }
+	                    var popupHtml = '<b style="font-size:12px">'+data[i].n+"</b> (<a href='/nodeInfo?id="+data[i].i+"' target='_blank'>node info</a>)<br>"
+                            +"<b>Owner:</b> "+data[i].o+"<br>"
+                            +"<b>Last Packet:</b> "+data[i].p+" <i>"+moment(data[i].a*1000).fromNow()+"</i>";
 	                    if(!nodeMarkers[data[i].n]) {
 	                        nodeMarkers[data[i].n] = L.marker([data[i].la,data[i].lo], {
                                 title: data[i].nn,
                                 icon: nodeIcon
                             }).addTo(map);
+                            nodeMarkers[data[i].n].bindPopup(popupHtml);
                         } else {
                             nodeMarkers[data[i].n].setIcon(nodeIcon);
+                            nodeMarkers[data[i].n].setLatLng([data[i].la,data[i].lo]);
+                            nodeMarkers[data[i].n].setPopupContent(popupHtml);
                         }
-                        nodeMarkers[data[i].n].bindPopup('<b style="font-size:12px">'+data[i].n+"</b> (<a href='/nodeInfo?id="+data[i].i+"' target='_blank'>node info</a>)<br>"
-                            +"<b>Owner:</b> "+data[i].o+"<br>"
-                            +"<b>Last Packet:</b> "+data[i].p+" <i>"+moment(data[i].a*1000).fromNow()+"</i>"
-                        );
                     }
 		        }
 	        }
