--- a/nodeInfo.html
+++ b/nodeInfo.html
@@ -52,28 +52,18 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">About</a></li>
-            <li><a href="map">Map</a></li>
+            <li><a href="map.html">Map</a></li>
+            <li><a href="nodeList">List of Nodes</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Devices <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Node Tools<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li class="dropdown-header">Nodes</li>
-                <li ><a href="nodeList">List of Nodes</a></li>
-                <li><a href="nodeAdd">Add New Node</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Users</li>
-                <li><a href="userList">List of Users</a></li>
-                <li><a href="userAdd">Add New User</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Support <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank">IRC Channel</a></li>
-                <li><a href="https://github.com/jamescoxon/UKHASnet/wiki" target="_blank">Wiki</a></li>
+                <li><a href="nodeAdd">Add Node</a></li>
+                <li><a href="nodeEdit">Edit Node</a></li>
               </ul>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank">IRC Chat</a></li>
             <li><a href="https://github.com/UKHASnet/" target="_blank">GitHub</a></li>
             <li><a href="logtail">Logtail</a></li>
           </ul>
