Dont use .html in hrefs.

--- a/nodeInfo.html
+++ b/nodeInfo.html
@@ -52,7 +52,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">About</a></li>
-            <li><a href="map.html">Map</a></li>
+            <li><a href="map">Map</a></li>
             <li><a href="nodeList">List of Nodes</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Node Tools<b class="caret"></b></a>
