--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">About</a></li>
-            <li><a href="map.html">Map</a></li>
+            <li><a href="map">Map</a></li>
             <li><a href="nodeList">List of Nodes</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Node Tools<b class="caret"></b></a>
