--- a/nodeList.html
+++ b/nodeList.html
@@ -50,7 +50,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">About</a></li>
-            <li><a href="map.html">Map</a></li>
+            <li><a href="map">Map</a></li>
             <li class="active"><a href="#">List of Nodes</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Node Tools<b class="caret"></b></a>
