Improve page titles and meta descriptions.

--- a/nodeEdit.html
+++ b/nodeEdit.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="UKHASnet - A simple and license-free mesh network.">
+    <meta name="description" content="Edit Node Descriptions on the UKHASnet Mesh Network.">
     <meta name="author" content="UK High Altitude Society">
     <title>Edit Node - UKHASnet</title>
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
