--- a/logtail.html
+++ b/logtail.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="UKHASnet - A simple license-free mesh network.">
+    <meta name="description" content="Packet upload logtail for the UKHASnet Mesh Network">
     <meta name="author" content="UK High Altitude Society">
-    <title>UKHASnet</title>
+    <title>logtail - UKHASnet</title>
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/bootstrap/css/ukhasnet.css" rel="stylesheet">
     <style>
