--- a/map.html
+++ b/map.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="UKHASnet - A simple license-free mesh network.">
+    <meta name="description" content="Map of the UKHASnet Mesh Network">
     <meta name="author" content="UK High Altitude Society">
-    <title>UKHASnet Map</title>
+    <title>Map - UKHASnet</title>
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/leaflet/leaflet.css" rel="stylesheet">
     <link href="static/bootstrap/css/ukhasnet.css" rel="stylesheet">
