--- a/index.html
+++ b/index.html
@@ -59,12 +59,17 @@
       <div class="jumbotron">
         <h1>UKHASnet</h1>
         <p>A simple wireless network aimed for use with low power licence exempt wireless modules. Ideally to be used for a local ground network for example for remote temperature sensing however will also be designed to allow for high altitude communications such as via meterological balloons.</p>
-        <p>The modules used are extremely low cost to encourage widespread development and deployment.</p>
+        <p>The modules used are extremely low cost, and the routing algorithm incredibly simple, to encourage widespread development and deployment.</p>
+        <br />
         <p>
           <a class="btn btn-lg btn-primary" href="map" role="button">Network Map &raquo;</a>
           <a class="btn btn-lg btn-primary" href="https://github.com/UKHASnet" target="_blank" role="button">GitHub &raquo;</a>
           <a class="btn btn-lg btn-primary" href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank" role="button">IRC Channel &raquo;</a>
         </p>
+        <br />
+        <p><h2>Getting Started</h2></p>
+        <p>To start your own mesh network, you'll first want to take a look at the <a href="https://github.com/UKHASnet/UKHASnet" target="_blank">UKHAS Node Reference implementation</a> (written for a 3.3V Arduino Board and RFM22.) The <a href="https://github.com/UKHASnet/UKHASnet/blob/master/README.md" target="_blank">README</a> gives a rough specification for the network, and aims to explain how it works.</p>
+        <p>Once you have a couple of nodes up and running, and talking to each other, you may want to interface them with the UKHASnet API so that data appears on this website. <a href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank">Talk to us on IRC</a> and we can help you work out how best to do this!</p>
       </div>
 
     </div>
