--- a/map.html
+++ b/map.html
@@ -74,7 +74,8 @@
     
     var osm = new L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
-        minZoom: 2
+        minZoom: 2,
+        maxZoom: 19
     });
     
     map.addLayer(osm);
