nodeEdit: Enable now we have the API.

--- a/nodeEdit.html
+++ b/nodeEdit.html
@@ -66,13 +66,13 @@
 
       <div class="node-form">
         <h1>Edit Node</h1>
-        <p class="lead">Not yet implemented</p>
+        <p class="lead">Select a node to edit its owner/description field.</p>
         <form class="form-horizontal" id="nodeEdit-form">
             <div class="form-group">
               <label class="col-xs-2 control-label" for="node-select">Select Node</label>
               <div class="col-xs-3">
                 <select name="node-select" id="node-select" class="form-control input-large">
-                    <option value="select">-- Select a Node</option>
+                    <option value="select">-- Select a Node --</option>
                 </select>
               </div>
             </div>
