index: Add links to wiki.

--- a/index.html
+++ b/index.html
@@ -63,13 +63,12 @@
         <br />
         <p>
           <a class="btn btn-lg btn-primary" href="map" role="button">Network Map &raquo;</a>
-          <a class="btn btn-lg btn-primary" href="https://github.com/UKHASnet" target="_blank" role="button">GitHub &raquo;</a>
+          <a class="btn btn-lg btn-primary" href="http://www.ukhas.net/wiki/" target="_blank" role="button">Wiki &raquo;</a>
           <a class="btn btn-lg btn-primary" href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank" role="button">IRC Channel &raquo;</a>
         </p>
         <br />
         <p><h2>Getting Started</h2></p>
-        <p>To start your own mesh network, you'll first want to take a look at the <a href="https://github.com/UKHASnet/UKHASnet" target="_blank">UKHAS Node Reference implementation</a> (written for a 3.3V Arduino Board and RFM22.) The <a href="https://github.com/UKHASnet/UKHASnet/blob/master/README.md" target="_blank">README</a> gives a rough specification for the network, and aims to explain how it works.</p>
-        <p>Once you have a couple of nodes up and running, and talking to each other, you may want to interface them with the UKHASnet API so that data appears on this website. <a href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank">Talk to us on IRC</a> and we can help you work out how best to do this!</p>
+        <p>To start your own mesh network, the <a href="http://www.ukhas.net/wiki/" target="_blank">Wiki</a> is a growing source of Guides and Information. Any questions, join us on <a href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank">IRC Chat</a> and say hello!</p>
       </div>
 
     </div>
