Add Wiki link to navbar.

--- a/map.html
+++ b/map.html
@@ -51,6 +51,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="http://www.ukhas.net/wiki/" target="_blank">Wiki</a></li>
             <li><a href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank">IRC Chat</a></li>
             <li><a href="https://github.com/UKHASnet/" target="_blank">GitHub</a></li>
             <li><a href="logtail">Logtail</a></li>
