--- a/logtail.html
+++ b/logtail.html
@@ -61,6 +61,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="http://www.ukhas.net/wiki/" target="_blank">Wiki</a></li>
             <li><a href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank">IRC Chat</a></li>
             <li><a href="https://github.com/UKHASnet/" target="_blank">GitHub</a></li>
             <li class="active"><a href="#">Logtail</a></li>
