nodeInfo: Adjust labels.

--- a/nodeInfo.html
+++ b/nodeInfo.html
@@ -82,10 +82,8 @@
         <form class="form-horizontal">
         <fieldset>
 
-        <legend>Graph Options</legend>
-
         <div class="control-group">
-          <label class="control-label" for="period-radios">Graph Options</label>&nbsp;<span id="graphload-status"></span>
+          <label class="control-label" for="period-radios">Graph Timespan</label>&nbsp;<span id="graphload-status"></span>
           <div class="controls">
             <label class="radio" for="period-radios-0">
               <input type="radio" name="period-radios" id="period-radios-0" value="48">
